tests/compile_errors/017-invalid-int-literal.buzz
| '_' must be between digits
test "invalid literals" {
   int a = 100_;
}
